test/files/neg/t8755b/sample_2.scala
//> using options -Xplugin:. -Xplugin-require:ploogin -Vphases -Werror
package sample

// just a sample that is compiled with the sample plugin enabled
object Sample extends App {
}
